<resources>
    <string name="app_name">Volunteer Service</string>

    <string name="send_button">Send Info</string>
    <string name="intro_text">VOLUNTEER SIGNUP</string>
    <string name="blank_text"> </string>
    <string name="title_activity_volunteer_screen">VolunteerScreen</string>

    <string name="no_req_string">Search for requests</string>
    <string name="complete_string">All requests complete! Search for more requests using the button below.</string>
    <string name="complete_view">No requests yet. Press the button below to check for some!</string>

    <string name="found_req">REQUEST FOUND</string>

    <!-- Number of refugee -->
    <string name="help_num_string">Number: %1$s</string>
    <!-- Food, Water, Shelter -->
    <string name="req_string">Need: %1$s</string>
    <!-- Location of nearest cell tower -->
    <string name="tower_loc_string">Location: %1$s</string>
    <!-- Timestamp of text -->
    <string name="msg_time_stamp_string">%1$s</string>

    <!-- Menu item strings -->
    <string name="menu_refresh">Refresh</string>
    
</resources>
